# DyMonD_agent_alternatives

./: README.md  Results.md
Agent/: CMakeLists.txt  README.md  README.txt  agent.cpp
C++_API/: CMakeLists.txt  README.md  c++_api_general.c  example.cpp
C_API/: README.md  README.txt  Sources.md  c_api.c  c_api_general.c  process_DyMonD.py  process_RNN.py  process_ResNet.py  process_predictions.py  ten_classes_0_results.csv  training_pb.py
Keras2C/: README.md  README.txt  create_testsuite.py  process_results.py  python_predictions1.csv  testsuite_DyMonD.c  testsuite_RNN.c  training_in_python.py
